Update reference list

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1185,6 +1185,22 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   modificationdate = {2023-07-06T10:40:37},
 }
 
+@Article{BuckBas2023,
+  author           = {Michèle C. Buck and Lisa Bast and Judith S. Hecker and Jennifer Rivière and Maja Rothenberg-Thurley and Luisa Vogel and Dantong Wang and Immanuel Andrä and Fabian J. Theis and Florian Bassermann and Klaus H. Metzeler and Robert A.J. Oostendorp and Carsten Marr and Katharina S. Götze},
+  journal          = {iScience},
+  title            = {Progressive Disruption of Hematopoietic Architecture from Clonal Hematopoiesis to {MDS}},
+  year             = {2023},
+  issn             = {2589-0042},
+  pages            = {107328},
+  abstract         = {Summary
+Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related acquisition of somatic mutations in hematopoietic stem/progenitor cells (HSPC) leading to clonal blood cell expansion. Although CHIP mutations drive myeloid malignancies like myelodysplastic syndromes (MDS) it is unknown if clonal expansion is attributable to changes in cell type kinetics, or involves reorganization of the hematopoietic hierarchy. Using computational modeling we analyzed differentiation and proliferation kinetics of cultured hematopoietic stem cells (HSC) from 8 healthy individuals, 7 CHIP, and 10 MDS patients. While the standard hematopoietic hierarchy explained HSPC kinetics in healthy samples, 57% of CHIP and 70% of MDS samples were best described with alternative hierarchies. Deregulated kinetics were found at various HSPC compartments with high inter-individual heterogeneity in CHIP and MDS, while altered HSC rates were most relevant in MDS. Quantifying kinetic heterogeneity in detail, we show that reorganization of the HSPC compartment is detectable in the premalignant CHIP state.},
+  creationdate     = {2023-07-17T09:12:31},
+  doi              = {10.1016/j.isci.2023.107328},
+  keywords         = {clonal hematopoiesis, myelodysplastic syndrome, computational modeling, hematopoietic hierarchy},
+  modificationdate = {2023-07-17T09:12:50},
+  url              = {https://www.sciencedirect.com/science/article/pii/S2589004223014050},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
