--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1201,6 +1201,22 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://www.sciencedirect.com/science/article/pii/S2589004223014050},
 }
 
+@Article{TunedalVio2023,
+  author           = {Tunedal, Kajsa and Viola, Federica and Garcia, Belén Casas and Bolger, Ann and Nyström, Fredrik H. and Östgren, Carl Johan and Engvall, Jan and Lundberg, Peter and Dyverfeldt, Petter and Carlhäll, Carl-Johan and Cedersund, Gunnar and Ebbers, Tino},
+  journal          = {The Journal of Physiology},
+  title            = {Haemodynamic effects of hypertension and type 2 diabetes: Insights from a {4D} flow {MRI-based} personalized cardiovascular mathematical model},
+  year             = {2023},
+  number           = {n/a},
+  volume           = {n/a},
+  abstract         = {Abstract Type 2 diabetes (T2D) and hypertension increase the risk of cardiovascular diseases mediated by whole-body changes to metabolism, cardiovascular structure and haemodynamics. The haemodynamic changes related to hypertension and T2D are complex and subject-specific, however, and not fully understood. We aimed to investigate the haemodynamic mechanisms in T2D and hypertension by comparing the haemodynamics between healthy controls and subjects with T2D, hypertension, or both. For all subjects, we combined 4D flow magnetic resonance imaging data, brachial blood pressure and a cardiovascular mathematical model to create a comprehensive subject-specific analysis of central haemodynamics. When comparing the subject-specific haemodynamic parameters between the four groups, the predominant haemodynamic difference is impaired left ventricular relaxation in subjects with both T2D and hypertension compared to subjects with only T2D, only hypertension and controls. The impaired relaxation indicates that, in this cohort, the long-term changes in haemodynamic load of co-existing T2D and hypertension cause diastolic dysfunction demonstrable at rest, whereas either disease on its own does not. However, through subject-specific predictions of impaired relaxation, we show that altered relaxation alone is not enough to explain the subject-specific and group-related differences; instead, a combination of parameters is affected in T2D and hypertension. These results confirm previous studies that reported more adverse effects from the combination of T2D and hypertension compared to either disease on its own. Furthermore, this shows the potential of personalized cardiovascular models in providing haemodynamic mechanistic insights and subject-specific predictions that could aid in the understanding and treatment planning of patients with T2D and hypertension. Key points The combination of 4D flow magnetic resonance imaging data and a cardiovascular mathematical model allows for a comprehensive analysis of subject-specific haemodynamic parameters that otherwise cannot be derived non-invasively. Using this combination, we show that diastolic dysfunction in subjects with both type 2 diabetes (T2D) and hypertension is the main group-level difference between controls, subjects with T2D, subjects with hypertension, and subjects with both T2D and hypertension. These results suggest that, in this relatively healthy population, the additional load of both hypertension and T2D affects the haemodynamic function of the left ventricle, whereas each disease on its own is not enough to cause significant effects under resting conditions. Finally, using the subject-specific model, we show that the haemodynamic effects of diastolic dysfunction alone are not sufficient to explain all the observed haemodynamic differences. Instead, additional subject-specific variations in cardiac and vascular function combine to explain the complex haemodynamics of subjects affected by hypertension and/or T2D.},
+  creationdate     = {2023-07-27T08:14:11},
+  doi              = {10.1113/JP284652},
+  eprint           = {https://physoc.onlinelibrary.wiley.com/doi/pdf/10.1113/JP284652},
+  keywords         = {cardiovascular modelling, clinical data, computer modelling, diabetes, hemodynamic, hypertension, mathematical model},
+  modificationdate = {2023-07-27T08:19:05},
+  url              = {https://physoc.onlinelibrary.wiley.com/doi/abs/10.1113/JP284652},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
